@@ -1,0 +1,42 @@
+{% include 'top.html' %}
+<div class="content">
+    <div class="container details">
+        <h1 class="title">Booking by: {{booking[0]}} for <strong>{{ booking[2] }}</strong> @ {{ booking[3] }}</h1>
+
+        <table>
+            <tr>
+                <td>Member Name</td>
+                <td>{{ booking[0] }}</td>
+            </tr>
+            <tr>
+                <td>Car Registration</td>
+                <td><a href="{{url_for('list_cars')}}?car={{ booking[1] }}"> {{ booking[1] }}</a></td>
+            </tr>
+            <tr>
+                <td>Car Name</td>
+                <td>{{ booking[2] }}</td>
+            </tr>
+            <tr>
+                <td>Date</td>
+                <td>{{ booking[3] }}</td>
+            </tr>
+            <tr>
+                <td>Time</td>
+                <td>{{ booking[4] }}</td>
+            </tr>
+            <tr>
+                <td>Duration</td>
+                <td>{{ booking[5] }}</td>
+            </tr>
+            <tr>
+                <td>When Booked</td>
+                <td>{{ booking[6] }}</td>
+            </tr>
+            <tr>
+                <td>Car Bay</td>
+                <td><a href="{{url_for('list_bays')}}?bay={{ booking[7] }}">{{ booking[7] }}</a></td>
+            </tr>
+        </table>
+    </div>
+</div>
+{% include 'bottom.html' %}
