@@ -14,3 +14,6 @@
 
 - Change /list-bookings template to add a Duration column
 
+- Add invoices-list and invoice-detail to the templates
+
+- Add /my_invoices to routes.py
